--- a/src/main/resources/templates/layouts/editButton.html
+++ b/src/main/resources/templates/layouts/editButton.html
@@ -10,21 +10,19 @@
     <title>MyList</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
-    
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
-<body>
-    <section th:fragment="editLayer">
-        <div id="editLayer" class="modal fade">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header bg-info text-white">
-                        <h5>Edit Task</h5>
-                        <button class="close" data-dismiss="modal">
-                            <span>&times;</span>
-                        </button>
-                    </div>
+<body> 
+    <section th:fragment="editButton" >
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <a href="#" class="btn btn-primary btn-block" 
+                        data-toggle="modal" data-target="#editTask">
+                        <i class="fas fa-edit"></i>
+                    </a>
                 </div>
             </div>
         </div>
